--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
     </head>
 
     <body>
+
+        <div id="terminal">
+
+            <h3 id="prev-command" class="terminal-user"></h3>
+
+            <!-- terminal output -->
+            <h3 id="terminal-output" class="terminal-output"></h3>
+        </div>
         
-        <!-- terminal output -->
-        <h2 id="terminal-output"></h2>
+        <div id="command-line">
 
-        <!-- terminal input -->
-        <input id="terminal-input" type="text">
-
+            <!-- terminal input -->
+            <input id="terminal-input" type="text" class="terminal-input">
+        </div>
 
     </body>
 
