--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
     <body>
 
-        <div id="terminal">
-
+        <div id="terminal">      
+            <!-- Welcome message -->
             <h3 id="welcome" class="welcome">
-                <span>Welcome to Johns Web Terminal.<br>
+                <span>Welcome to John Burton's Web Terminal.<br>
                     Type </span>
                     <span style="color: rgb(7, 189, 165);">'help'</span> for a list of commands.
             </h3>
