--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
 
     <body>
 
-        <div id="terminal">      
+        <div id="terminal">
+
+            <!-- ASCII  -->
+            <div id="ascii" class="ascii">
+                <pre>
+                    ___  ________  ___  ___  ________           ________  ___  ___  ________  _________  ________  ________      
+                    |\  \|\   __  \|\  \|\  \|\   ___  \        |\   __  \|\  \|\  \|\   __  \|\___   ___\\   __  \|\   ___  \    
+                    \ \  \ \  \|\  \ \  \\\  \ \  \\ \  \       \ \  \|\ /\ \  \\\  \ \  \|\  \|___ \  \_\ \  \|\  \ \  \\ \  \   
+                  __ \ \  \ \  \\\  \ \   __  \ \  \\ \  \       \ \   __  \ \  \\\  \ \   _  _\   \ \  \ \ \  \\\  \ \  \\ \  \  
+                 |\  \\_\  \ \  \\\  \ \  \ \  \ \  \\ \  \       \ \  \|\  \ \  \\\  \ \  \\  \|   \ \  \ \ \  \\\  \ \  \\ \  \ 
+                 \ \________\ \_______\ \__\ \__\ \__\\ \__\       \ \_______\ \_______\ \__\\ _\    \ \__\ \ \_______\ \__\\ \__\
+                  \|________|\|_______|\|__|\|__|\|__| \|__|        \|_______|\|_______|\|__|\|__|    \|__|  \|_______|\|__| \|__|
+                  </pre>
+            </div>
+            
+
+
             <!-- Welcome message -->
             <h3 id="welcome" class="welcome">
                 <span>Welcome to John Burton's Web Terminal.<br>
